--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fs/react-boost-example",
+  "name": "@friendlyss/react-boost-example",
   "homepage": ".",
   "version": "0.0.0",
   "private": true,
@@ -18,7 +18,7 @@
     "@types/react": "link:../node_modules/@types/react",
     "@types/react-dom": "link:../node_modules/@types/react-dom",
     "react": "link:../node_modules/react",
-    "@fs/react-boost": "link:..",
+    "@friendlyss/react-boost": "link:..",
     "react-dom": "link:../node_modules/react-dom",
     "react-router-dom": "^5.2.0",
     "react-scripts": "link:../node_modules/react-scripts",
