--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "@fs/react-boost",
+  "name": "@friendlyss/react-boost",
   "version": "1.0.0",
   "description": "Made with create-react-library",
   "author": "kodiyak",
-  "license": "MIT",
-  "repository": "kodiyak/@fs/react-boost",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/friendlyss/react-boost.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
